# PythonEmbeddedDemo

./: CMakeLists.txt  README.md  channel_mapper.py  go.sh
include/: PythonWrapper.hpp
src/: Main.cpp  PythonWrapper.cpp
